--- a/responsiveWebDesign/htmlRegistrationForm/styles.css
+++ b/responsiveWebDesign/htmlRegistrationForm/styles.css
@@ -4,4 +4,61 @@ body{
 	margin: 0;
 	background-color: #1b1b32;
 	color: #f5f6f7;
+	font-family: Tahoma serif;
+	font-size: 16px;
+}
+label{
+	display: block;
+	margin: 0.5rem 0;
+}
+h1, p{
+	margin: 1em auto;
+	text-align: center;
+}
+/*Center the form*/
+form{
+	margin: 0 auto;
+	min-width: 500px;
+	max-width: 300px;
+	width: 60vw;
+	padding: 0 0 2em 0;
+}
+fieldset{
+	border: none;
+	padding: 0 2rem;
+	border-bottom: 3px solid #3b3b4f;
+}
+fieldset:last-of-type{
+	border-bottom: none;
+}
+input, textarea, select{
+	width: 100%;
+	margin-top: 10px 0 0 0;
+	min-height: 2em;
+}
+.inline{
+	width: unset;
+	margin-top: 0 0.5em 0 0;
+	vertical-align: middle;
+}
+input, textarea{
+	background-color: #0a0a23;
+	border: 1px solid #0a0a23;
+	color: #ffffff;
+}
+input[type="submit"]{
+	display: block;
+	width: 60%;
+	margin: 1em auto;
+	min-width: 300px;
+	height: 2em;
+	font-size: 1.1rem;
+	background-color: #3b3b4f;
+	border-color: white;
+}
+input[type="file"]{
+	padding: 1px 2px;
+}
+a{
+	color: #dfdfe2;
 }
